# VideoPlay

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h  XData.cpp  XData.h  XParameter.cpp  XParameter.h  Xlog.cpp  Xlog.h  native-lib.cpp
app/src/main/cpp/SoundTouch/: SoundTouchWrapper.cpp  SoundTouchWrapper.h
app/src/main/cpp/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/decode/: DecodeInit.cpp  DecodeInit.h  FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/filter/: STFilter.cpp  STFilter.h
app/src/main/cpp/opengl/: XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/resample/: FFResample.cpp  FFResample.h  IResample.cpp  IResample.h
app/src/main/cpp/thread/: IObserver.cpp  IObserver.h  XThread.cpp  XThread.h
app/src/main/cpp/ut/: FFNetAudio.cpp  FFNetAudio.h  FFNetVideo.cpp  FFNetVideo.h  INetAudio.cpp  INetAudio.h  INetVideo.cpp  INetVideo.h
app/src/main/cpp/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
app/src/main/java/com/example/videoplay/: MainActivity.java  TestActivity.java
app/src/main/res/layout/: activity_test.xml
